[package]
name = "gba_spriter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lodepng = "3.6.2"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
structopt = "0.3.26"
walkdir = "2.3.2"
