[package]
name = "gba_spriter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
lodepng = "3.6.2"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
syn = { version = "1.0.96", features = ["parsing", "proc-macro"] }
walkdir = "2.3.2"
